# diff-match-patch

./: .project  .travis.yml
cpp/: CMakeLists.txt  diff_match_patch.pro  makefile
lua/: diff_match_patch.lua
python2/: requirements.txt
